# Quarter_3_PIAIC

./: Assignment_2.md  Assignment_3_image_prompt.ipynb  Assignment_4_aiSuite_andrewyng.ipynb  Assignment_6_Ai_Video_Analysis.ipynb  Assignment_6_Video_analysis.ipynb  Project_1_langchain.ipynb
Assignment_5_video/: Audio.ipynb
Assignment_8_pdf_reader/: app.py  requirements.txt  styles.css
Assignment_9_Weather_prediction/: assignment9.py
UV/Assignment_11/: README.md  pyproject.toml
UV/Assignment_11/src/assignment_11/: __init__.py  hello.py
meta-ai-weather-app/: package-lock.json  package.json  tailwind.config.ts
meta-ai-weather-app/src/app/: layout.tsx  page.tsx
meta-ai-weather-app/src/app/api/weather/: route.ts
meta-ai-weather-app/src/components/: Weatherapp.tsx
