[project]
name = "assignment-11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MaryamRiaz-chattha", email = "maryamriaz800@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
assignment-11 = "assignment_11:main"
world="assignment_11.hello:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
